glFusion ChangeLog

v1.2
----------
- Added {!!autotag ..} feature to template class (Mark)
- Update BB2 to v2.0.32 (Mark)
- Update CAPTCHA to v3.2.4 (Mark/Mark)
- Added wrapper static page widget (Eric)
- Update all MooTools-dependent javascript to MooTools 1.2.3 (Mark H.)
- Added Mootools core and more files to install directory (Eric)
- Changed sizingMethod to properly scale pngfix images (Eric)
- Fixed Windows site link in gl_mooie6warning script (Eric)
- Fixed issue where gl_moomorph wasn't consistently called (Eric)
- Merge layout custom CSS files rather than uniquely select (Mark H.)

v1.1.7 svn
----------
- Implemented 4 new template vars for articles to allow plugins additional
  integration opportunities: (Mark)
    - plugin_icon_vars
    - plugin_meta_vars
    - plugin_body_vars
    - plugin_footer_vars
- Add topic id to topic lists to help multi-linqual sites (Mark)
- Add title attribute to What's New (Mark)
    - Stories
    - Comments - already supported
    - FileMgmt
    - Links - already supported
    - Media Gallery
- FileMgmt: Added file_download autotag (Mark H.)
- Moved rating code out of Media Gallery into core (Mark)
  - implemented rating for articles
  - updated FileMgmt / Media Gallery to use new rating system
- Media Gallery - Updated SWFObject to v2.2 (Mark)
- Fixed bug in PLG_getConfigElementHelp() where it did not pass the proper
  arguments (Mark)
- CAPTCHA - Added reCAPTCHA support (Mark)
- Fourm plugin - Improved handling of the cancel request (Mark)
- Forum plugin - Add cancel button to create topic (Mark)
- Forum plugin - Fixed paging issue when going to a specific topic (Mark)
- Media Gallery: Added PLG_setTemplateVars() call to the album view (Mark)
- Added ICS (calendar export) to syndication library (Mark)
- Added autotag logic to template library (Mark)
- Upgrade Geshi to v1.0.8.4 (Mark)
- BBcode handler - fixed issue where some posts would show as blank (Mark)
- Upgrade FCKeditor to 2.6.5 (Mark)